# RTCM

./: .gitignore  CMakeLists.txt  RTCMl.c  config.txt  main.c
GTK/: CMakeLists.txt  func.c  main.c  res.rc
com/: com.c  com.h
include/glib-2.0/gio/: gioenumtypes.h
src/: func.c  main.c
trash/: RTCMl.c  config.txt
trash/GTK/: CMakeLists.txt  main.c
trash/GTK/include/GTK3/glib-2.0/gobject/: glib-enumtypes.h
